# imgui-app-base

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  imgui.ini
cmake/: imgui-gl.cmake
imapp/include/imapp/: imapp.h
imapp/include/imapp/canvas/: canvas.h  frame_buffer_manager.h
imapp/include/imapp/primitives/: cylinder.h  drawable.h  mesh.h
imapp/include/imapp/utils/: threadpool.h
imapp/include/imapp/widget/: imageviewer.h
imapp/src/: imapp.cpp  mesh.cpp
resource/: sedan.stl
src/: Unbutu.h  imgui_app_base.cpp
src/include/: canvas.h  frame_buffer_manager.h  imgui_app_base.h
src/include/canvas/primitives/: axis.h  cylinder.h  drawable.h  mesh.cpp  mesh.h  shader.h
test/: CMakeLists.txt  test_app.cpp  test_plot_demo.cpp
